# Finite_state_tool

./: CMakeLists.txt  main.cpp
CommandShell/Dispatcher/: CommandDispatcher.cpp  CommandDispatcher.h
MinimalAcyclicSubsequentialTransducer/Builder/: MinimalSubsequentialTransducerBuilder.h
Non-deterministic_pushdown_automaton/: NPDA.h
